--- a/config_parameters.json
+++ b/config_parameters.json
@@ -1,6 +1,6 @@
 {
     "Parameters": {
-        "KeyName": "fall2024x",
+        "KeyName": "Ass2",
         "InstanceType": "t2.micro",
         "SSHLocation": "10.0.0.1/32",
         "DBName": "wordpressdb",
